# customDigitalSignage

./: .gitignore  DEVLOG.md  LAUNCH_SESSION.md  PHASES.md  TODO_NEXT_SESSION.md  _Utilities  index.html  package-lock.json  package.json  tailwind.config.js  vant-signage-dashboard.jsx  vite.config.ts
agent/: pyproject.toml
agent/install/: com.vant.agent.plist  config.example.yaml  kiosk-session.sh  setup.sh  vant-agent.service
agent/vant_agent/: __main__.py  agent.py
agent/vant_agent/commands/: handler.py
agent/vant_agent/core/: api_client.py  config.py
agent/vant_agent/playback/: player.py  scheduler.py
agent/vant_agent/sync/: downloader.py  manifest.py
agent/vant_agent/telemetry/: collector.py
api/: .env.example  Dockerfile  pyproject.toml  railway.toml  seed_dev.py  start.sh
api/app/: main.py
api/migrations/: env.py
api/tests/: conftest.py  test_alert_evaluator.py  test_auth.py  test_schedule_resolver.py
docs/: AI_AGENT_PROTOCOL.md  MIGRATION_CRASH_PREVENTION_RULE.md  MIGRATION_SAFETY_CHECKLIST.md  PROJECT_RULES.md  RAILWAY_CLI_GUIDE.md  SERVER_MAP.md  SESSION_JOURNAL.md  SESSION_START_PROTOCOL.md
src/: App.tsx  index.css  main.tsx
src/pages/: AlertsPage.tsx  AuditPage.tsx  DisplaysPage.tsx  LoginPage.tsx  MediaPage.tsx  MonitoringPage.tsx  PlaylistBuilderPage.tsx  ProvisioningPage.tsx  SchedulesPage.tsx  SettingsPage.tsx
src/services/: apiClient.ts  wsService.ts
src/stores/: alertStore.ts  authStore.ts  displayStore.ts  mediaStore.ts  monitoringStore.ts  playlistStore.ts  provisioningStore.ts  scheduleStore.ts
src/types/: index.ts
(+34 files in other folders)
