[project]
name = "vant-agent"
version = "0.1.0"
description = "VANT Signage Display Agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "psutil>=5.9",
    "aiofiles>=23.0",
]

[project.scripts]
vant-agent = "vant_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["vant_agent*"]
